--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
     "@mantine/notifications": "^7.3.2",
+    "@rainbow-me/rainbowkit": "^1.3.1",
     "axios": "^1.6.2",
     "circomlib": "^2.0.5",
     "ethers": "^5",
