--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mantine/hooks": "^7.3.2",
     "@mantine/notifications": "^7.3.2",
     "@rainbow-me/rainbowkit": "^1.3.1",
+    "@types/circomlibjs": "^0.1.6",
+    "@types/snarkjs": "^0.7.7",
     "axios": "^1.6.2",
     "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
     "ethers": "^5",
     "next": "14.0.4",
     "react": "^18",
