--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@rainbow-me/rainbowkit": "^1.3.1",
     "@types/circomlibjs": "^0.1.6",
     "@types/snarkjs": "^0.7.7",
+    "@wagmi/core": "^1.4.12",
     "axios": "^1.6.2",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
+    "core": "link:@types/@wagmi/core",
     "ethers": "^5",
     "next": "14.0.4",
     "react": "^18",
