--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/core": "^7.3.2",
-    "@mantine/hooks": "^7.3.2",
-    "@mantine/notifications": "^7.3.2",
     "@rainbow-me/rainbowkit": "^1.3.1",
     "@types/circomlibjs": "^0.1.6",
     "@types/snarkjs": "^0.7.7",
@@ -23,20 +19,19 @@
     "core": "link:@types/@wagmi/core",
     "ethers": "^5",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
     "snarkjs": "^0.7.2",
+    "viem": "^1.21.0",
     "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.0.4"
   }
 }
