--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/circomlibjs": "^0.1.6",
     "@types/snarkjs": "^0.7.7",
     "@wagmi/core": "^1.4.12",
+    "abitype": "^0.10.3",
     "axios": "^1.6.2",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
     "core": "link:@types/@wagmi/core",
     "ethers": "^5",
     "next": "14.0.4",
+    "react-terminal-ui": "^1.2.0",
     "snarkjs": "^0.7.2",
     "viem": "^1.21.0",
     "wagmi": "^1.4.12"
